<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:id="@+id/join_member_choose_name_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="51dp">

        <RelativeLayout
            android:id="@+id/join_member_choose_name_cancel_container"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:clickable="true">

            <ImageButton
                android:id="@+id/join_member_chhose_name_btn_cancel"
                android:layout_width="6.33dp"
                android:layout_height="12.33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16.33dp"
                android:src="@drawable/upload_btn_back"
                android:scaleType="fitXY"
                android:background="@null"

                />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/join_insert_userName_title"
            android:textSize="14dp"
            android:layout_toRightOf="@id/join_member_choose_name_cancel_container"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.33dp"
            android:background="#cacaca"
            android:layout_alignParentBottom="true"
            >

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/join_member_insert_name_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27.66dp"
        android:layout_marginLeft="19.66dp"
        android:layout_marginRight="19.66dp"
        android:layout_below="@id/join_member_choose_name_menu_bar"
        >
        <TextView
            android:id="@+id/join_member_txt_insert_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_insert_userName_txt_name"
            android:textSize="13.5dp"
            android:textColor="#494949"
            android:layout_marginBottom="19.66dp"

            />

        <EditText
            android:id="@+id/join_member_edit_insert_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_member_txt_insert_name"
            android:background="@null"
            android:hint="@string/join_insert_userName_edit_name"
            android:textSize="17dp"
            android:textColorHint="#b8b8b8"
            android:singleLine="true"
            android:maxLength="16"
            />

        <RelativeLayout
            android:id="@+id/join_member_divider_line"
            android:layout_width="match_parent"
            android:layout_height="0.33dp"
            android:background="#f7c243"
            android:layout_marginTop="11dp"
            android:layout_below="@id/join_member_edit_insert_name"
            >

        </RelativeLayout>

        <TextView
            android:id="@+id/join_member_txt_error_message_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f7c243"
            android:text="@string/join_insert_userName_txt_more_than_two_word"
            android:layout_below="@id/join_member_divider_line"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/join_member_txt_error_message_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f7c243"
            android:text="@string/join_insert_userName_txt_less_than_two_word"
            android:layout_below="@id/join_member_divider_line"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="65.33dp"
        android:layout_centerHorizontal="true"
        >

        <RelativeLayout
            android:id="@+id/join_member_insert_name_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            >

            <TextView
                android:id="@+id/join_member_service_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_service_term_service"
                android:textStyle="bold"
                android:textSize="15dp"
                android:clickable="true"
                android:textColor="#000000"

                />

            <TextView
                android:id="@+id/join_member_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_service_personal_info"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_toRightOf="@id/join_member_service_term"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:textColor="#000000"

                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/join_member_insert_name_txt_container_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/join_member_insert_name_service"
            >

            <TextView
                android:id="@+id/join_member_choose_name_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_service_term_first_line"
                android:textSize="11.3dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/join_member_insert_name_txt_container_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_member_insert_name_txt_container_1"
            android:layout_marginTop="8.33dp"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:id="@+id/join_member_choose_name_txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_service_term_second_line"
                android:textSize="11.3dp"

                />



        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/join_member_choose_name_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50.66dp"
        android:layout_below="@id/account_setting_container"
        android:layout_centerHorizontal="true"
        android:text="@string/login_btn_confirm"
        android:textSize="14.33dp"
        android:textStyle="bold"
        android:background="#f7c243"
        android:layout_alignParentBottom="true"
        />

    <WebView
        android:id="@+id/join_member_web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >


    </WebView>

</RelativeLayout>