<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:id="@+id/join_member_insert_email_password_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="51dp">

        <RelativeLayout
            android:id="@+id/join_member_insert_email_password_cancel_container"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:clickable="true">


            <ImageButton
                android:id="@+id/join_member_insert_email_password_btn_cancel"
                android:layout_width="6.33dp"
                android:layout_height="12.33dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16.33dp"
                android:src="@drawable/upload_btn_back"
                android:scaleType="fitXY"
                android:background="@null"

                />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/join_insert_email_password_title"
            android:textSize="14dp"
            android:layout_toRightOf="@id/join_member_insert_email_password_cancel_container"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.33dp"
            android:background="#cacaca"
            android:layout_alignParentBottom="true"
            >

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/join_member_insert_email_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27.66dp"
        android:layout_marginLeft="19.66dp"
        android:layout_marginRight="19.66dp"
        android:layout_below="@id/join_member_insert_email_password_menu_bar"
        >

        <TextView
            android:id="@+id/join_member_txt_insert_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_insert_email_password_txt_email"
            android:textSize="13.5dp"
            android:textColor="#494949"
            android:layout_marginBottom="19.66dp"

            />

        <RelativeLayout
            android:id="@+id/join_member_insert_email_editText_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_member_txt_insert_email"
            >

            <EditText
                android:id="@+id/join_member_edit_insert_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/join_insert_email_password_edit_email"
                android:textSize="17dp"
                android:textColorHint="#b8b8b8"
                android:layout_centerVertical="true"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />

            <ImageView
                android:id="@+id/join_member_insert_email_img_check"
                android:layout_width="29.33dp"
                android:layout_height="29.66dp"
                android:src="@drawable/member_btn_07_check"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/join_member_divider_line"
            android:layout_width="match_parent"
            android:layout_height="0.33dp"
            android:background="#f7c243"
            android:layout_marginTop="4.33dp"
            android:layout_below="@id/join_member_insert_email_editText_container"
            />

        <TextView
            android:id="@+id/join_member_txt_error_message_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f7c243"
            android:text="@string/join_insert_email_password_txt_incorrect_email"
            android:layout_below="@id/join_member_divider_line"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            />


        <TextView
            android:id="@+id/join_member_txt_insert_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_insert_email_password_txt_password"
            android:textSize="13.5dp"
            android:textColor="#494949"
            android:layout_below="@id/join_member_divider_line"
            android:layout_marginTop="42.33dp"
            android:layout_marginBottom="19.66dp"

            />

        <RelativeLayout
            android:id="@+id/join_member_insert_password_editText_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_member_txt_insert_password"
            >

            <EditText
                android:id="@+id/join_member_edit_insert_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/join_insert_email_password_edit_password"
                android:textSize="17dp"
                android:textColorHint="#b8b8b8"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:inputType="textVisiblePassword"
                />

            <ImageView
                android:id="@+id/join_member_insert_password_img_check"
                android:layout_width="29.33dp"
                android:layout_height="29.66dp"
                android:src="@drawable/member_btn_07_check"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/join_member_divider_line_2"
            android:layout_width="match_parent"
            android:layout_height="0.33dp"
            android:background="#f7c243"
            android:layout_marginTop="4.33dp"
            android:layout_below="@id/join_member_insert_password_editText_container"
            />

        <TextView
            android:id="@+id/join_member_txt_error_message_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f7c243"
            android:text="@string/join_insert_email_password_txt_incorrect_password"
            android:layout_below="@id/join_member_divider_line_2"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/join_member_txt_error_message_password_special_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f7c243"
            android:text="@string/join_insert_email_password_txt_mix_password"
            android:layout_below="@id/join_member_divider_line_2"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/join_member_txt_error_message_password_no_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f7c243"
            android:text="@string/join_insert_userName_txt_space"
            android:layout_below="@id/join_member_divider_line_2"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            />


    </RelativeLayout>

    <Button
        android:id="@+id/join_member_insert_email_password_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50.66dp"
        android:layout_centerHorizontal="true"
        android:text="@string/join_insert_email_password_btn_finish"
        android:textSize="14.33dp"
        android:textStyle="bold"
        android:background="#f7c243"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>