<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/view_delete_comment_question"
            android:textColor="#000000"

            />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/comment_delete_confirm_container"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#f7c243"
                android:clickable="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/view_delete_comment_yes"
                    android:textColor="#000000"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/comment_delete_cancel_container"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:clickable="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/view_delete_comment_no"
                    android:textColor="#000000"

                    />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>